[project]
name = "myofaiber-mask-refinement"
version = "0.1.0"
description = "Refine MyoFAIber *_pred masks in Napari for fine-tuning datasets"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "napari[all]>=0.7.0",
    "numpy>=2.3.5",
    "pillow>=12.1.1",
    "pyopengl>=3.1.10",
    "pyqt5>=5.15.11",
    "imagecodecs>=2024.1.1",
    "scikit-image>=0.24.0",
]

# pyqt5-qt5 publishes platform-specific wheels (Windows only in 5.15.2;
# newer releases are macOS/Linux only). Tell uv both platforms are required
# so the lockfile picks a version installable on Windows and macOS.
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
